omweather (0.26.3) unstable; urgency=low

  * Improvement in downloading algorithm
  * Fixed bug #10016 "Widget style option "Now, today and tomorrow" actually "Now + 2 days"
  * Disabled an animation if applet isn't visible
  * Updated Russian translation

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 26 Apr 2010 19:22:10 +0200

omweather (0.26.2) unstable; urgency=low

  * Fixed problem with DBUS  
  * Fixed bug #5910 "Widget settings overwrite app settings when app is first
    started and confiugred from Applications"
  * Fixed problem with double start of settings window
  * Fixed bug #6469 "The first title in detailed weather view partially visible"

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 19 Apr 2010 19:22:10 +0200

omweather (0.26.1) unstable; urgency=low

  * Changed in external view for moon widget
  * Fixed problem with GPS stations

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 28 Feb 2010 16:11:10 +0200

omweather (0.26) unstable; urgency=low

  * Fixed bug #5362 "Home's layout for the widget doesn't match the visible layout"
  * Fixed bug #8960 "GPS station does not update"
  * Fixed problem with adding or modifying a new station in configuration window
  * Added pressure to expanded view for all days (it presents only in
    gismeteo.ru source)

 -- Vlad Vasiliev <vlad@gas.by>  Sun, 28 Feb 2010 16:11:10 +0200

omweather (0.25.8) unstable; urgency=low

  * Bug in promotion phase in builder for package 0.25.7 (armel)
  http://maemo.org/packages/package_instance/view/fremantle_extras-devel_free_armel/omweather/0.25.7/

 -- Vlad Vasiliev <vlad@gas.by>  Sat, 27 Feb 2010 16:11:10 +0200

omweather (0.25.7) unstable; urgency=low

  * Fixed bug #9293 "update problem"

 -- Vlad Vasiliev <vlad@gas.by>  Fri, 26 Feb 2010 16:11:10 +0200

omweather (0.25.6) unstable; urgency=low

  * Fixed bug #5976 "Clearing a station doesn't result in the same state as the initial state"
  * Fixed bug #6125 "please don't use system modal dialogs"
  * Improved algorithm for updating data