@@ -1,13 +1,13 @@
 #! /bin/sh
 
-if test -f /usr/share/applications/hildon-home/omweather-home.desktop ; then
-    rm  -f /usr/share/applications/hildon-home/omweather-home.desktop
-    sleep 2
-fi
+#if test -f /usr/share/applications/hildon-home/omweather-home.desktop ; then
+#    rm  -f /usr/share/applications/hildon-home/omweather-home.desktop
+#    sleep 2
+#fi
 
-if test ! -f  /usr/share/applications/hildon-home/omweather-home.desktop ; then
-   cp /usr/share/omweather/omweather-home.desktop /usr/share/applications/hildon-home/omweather-home.desktop
-fi
+#if test ! -f  /usr/share/applications/hildon-home/omweather-home.desktop ; then
+#   cp /usr/share/omweather/omweather-home.desktop /usr/share/applications/hildon-home/omweather-home.desktop
+#fi
 
 
 gtk-update-icon-cache -f /usr/share/icons/hicolor
